# gotify-mcp

./: .app.json  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  gemini-extension.json  gotify-mcp-server.py  gotify.subdomain.conf  plugin.json  pyproject.toml  server.json  test_connection.py
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  docker-publish.yml  publish-pypi.yml
docs/: CHECKLIST.md  CLAUDE.md  CONFIG.md  GUARDRAILS.md  INVENTORY.md  SETUP.md
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  LOGS.md  MCPORTER.md  MCPUI.md  PATTERNS.md  PRE-COMMIT.md  PUBLISH.md  RESOURCES.md  SCHEMA.md  TESTS.md  TOOLS.md  TRANSPORT.md  WEBMCP.md
docs/plugin/: AGENTS.md  CHANNELS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  HOOKS.md  MARKETPLACES.md  OUTPUT-STYLES.md  PLUGINS.md  SCHEDULES.md  SKILLS.md
docs/repo/: CLAUDE.md  MEMORY.md  RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/stack/: ARCH.md  CLAUDE.md  PRE-REQS.md  TECH.md
docs/upstream/: CLAUDE.md
gotify_mcp/: __init__.py  server.py
gotify_mcp/services/: __init__.py  gotify.py
hooks/: hooks.json
hooks/scripts/: ensure-gitignore.sh  ensure-ignore-files.sh  fix-env-perms.sh  sync-env.sh
scripts/: check-docker-security.sh  check-no-baked-env.sh  ensure-ignore-files.sh  lint-plugin.sh  smoke-test.sh
skills/gotify/: SKILL.md
tests/: TEST_COVERAGE.md  test_gotify_client.py  test_live.sh
