[project]
name = "gotify-mcp"
version = "0.2.0"
description = "MCP server for Gotify push notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
gotify-mcp-server = "gotify_mcp.server:main"

[tool.setuptools.packages.find]
include = ["gotify_mcp*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ty]
cache-dir = ".cache/ty"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]
