[project]
name = "gotify-mcp"
version = "0.3.0"
description = "MCP server for Gotify push notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
]

[project.scripts]
gotify-mcp-server = "gotify_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gotify_mcp"]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ty]
cache-dir = ".cache/ty"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]

[tool.coverage.run]
data_file = ".cache/coverage/.coverage"

[tool.coverage.html]
directory = ".cache/coverage/html"

[tool.coverage.xml]
output = ".cache/coverage/coverage.xml"
